@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py27,py33,py34,py35,pypy,pypy3
+    py27,py34,py35,py36,pypy,pypy3
 
 [testenv]
 commands =
