@@ -4,6 +4,8 @@ Changelog
 4.0 - unreleased
 ----------------
 
+- Drop Python 3.3 compatibility, add Python 3.6 compatibility.
+
 - Require ZODB 5.0 or newer.
 
 3.1 - unreleased
